fix: prose list spacing

--- a/src/styles/type.css
+++ b/src/styles/type.css
@@ -129,8 +129,16 @@ mark {
 	margin-block-start: 1.5rem;
 }
 
-.prose table + *, .prose * + blockquote {
-	margin-block-start: 1rem;
+.prose ul ul, .prose ol ol {
+	margin-block: 0.25rem;
+}
+
+.prose ul li + li, prose ol li * li {
+	margin-block-start: 0.5rem;
+}
+
+.prose * + blockquote {
+	margin-block-start: 0.25rem;
 }
 
 .prose table td:not(:empty) {
